--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^7.4.3|^8.1",
         "morilog/jalali": "3.*",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/notifications": "^8.0",
+        "illuminate/notifications": "*",
         "predis/predis": "^1.1",
         "picqer/php-barcode-generator": "^2.2",
         "brianium/paratest": "^6.3",
